Add URLs from https://tcpshield.com/v4-cf/